[metadata]
name = pmfp
version = 4.0.0
url = https://github.com/Python-Tools/pmfp
author = hsz
author_email = hsz1273327@gmail.com
description = A simple package manager and scaffold for python.
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = config, environment variable, command line arguments, config file
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Documentation :: Sphinx
    
[options]
zip_safe = False
include_package_data = True
packages = find:

install_requires =
    schema_entry >= 0.1.5
    colorama >= 0.4.0
    gevent >= 20.0.0
    termcolor >= 1.0.0
    chardet >= 3.0.4
    jsonschema >= 3.2.0
    requests >= 2.24.0
    requests_oauthlib >= 1.3.0
    GitPython >= 3.1.5
    boom >= 1.0
    pyaml >= 20.4.0
    toml >= 0.10.1
    mypy >= 0.800
    jinja2 >= 2.11

[options.packages.find]
include = pmfp
exclude = test

[options.entry_points]
console_scripts =
    ppm = pmfp.__main__:main