[metadata]
name = pmfp
version = 4.1.5
url = https://github.com/Python-Tools/pmfp
author = hsz
author_email = hsz1273327@gmail.com
description = A simple package manager and scaffold for python & some other languages.
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = config, environment variable, command line arguments, config file
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Documentation :: Sphinx
    
[options]
zip_safe = False
include_package_data = True
packages = find:

install_requires =
    wheel >= 0.36.2
    Pygments >= 2.9.0
    Babel >= 2.9.1
    mypy >= 0.800
    schema_entry >= 0.1.5
    colorama >= 0.4.0
    termcolor >= 1.0.0
    jsonschema >= 3.2.0
    requests >= 2.24.0
    requests_oauthlib >= 1.3.0
    GitPython >= 3.1.5
    pyaml >= 20.4.0
    toml >= 0.10.1
    jinja2 >= 2.11
    sphinx >= 3.5
    coverage >= 5.5
    recommonmark >= 0.7.1
    sphinxcontrib-napoleon >= 0.7
    sphinx-intl >= 2.0.1
    sphinx-autoapi >= 1.8.1
    sphinx_rtd_theme >= 0.5.2

tests_require = 
	coverage >= 5.5
	mypy >= 0.800
	autopep8 >= 1.5.6
	pylint >= 2.8.0
	pydocstyle>=6.0.0

setup_requires =
    setuptools >= 40.9.0
    wheel

[options.packages.find]
include = pmfp
exclude = test

[options.entry_points]
console_scripts =
    ppm = pmfp.__main__:main